--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container {
+  width: 1000px;
+  
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  flex: 1;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+}
+.images {
+  flex: 1;
+  display: flexbox;
+  text-align: center;
+}
+img{
+  margin: 10px;
+}
+.footer{
+  flex: 1;
+  margin-top: 300px;
+  text-align: center;
+  border-top: 1px solid rgb(207, 200, 200);
+  color:  rgb(207, 200, 200);
+  padding: 10px;
 }
