--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 1000px;
-  
+  margin: auto;
 }
 .header {
   flex: 1;
@@ -16,6 +16,9 @@
 .images img{
   margin: 10px;
 }
+.images img:hover{
+  cursor: pointer;
+}
 .footer{
   flex: 1;
   margin-top: 100px;
@@ -24,22 +27,24 @@
   color:  rgb(207, 200, 200);
   padding: 10px;
 }
-.modal_wrapper{
+.modal-wrapper{
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 1000px;
+  max-width: 100%;
   background: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(10px);
+  margin: auto;
 }
-.modal_wrapper.open{
+.modal-wrapper.open{
   height: 100%;
   display: block;
 }
-.modal_wrapper.close{
+.modal-wrapper.close{
   height: 0;
   display: none;
 }
-.modal_body{
+.modal-body{
   max-width: 700px;
   margin: auto;
   background: white;
@@ -59,6 +64,7 @@
 .modal-left img {
   width: 100%;
   height: 300px;
+  border-radius: 5px;
 }
 .modal-left input{
   width: 100%;
@@ -85,15 +91,17 @@
   padding: 15px 0 5px 0;
   color: rgb(184, 179, 179);
 }
-.modal_close{
+.modal-close{
   text-align: right;
   flex: 1;
-  font-size: 30px;
-  
+  font-size: 30px; 
+}
+.modal-close:hover{
+  cursor: pointer;
 }
 
 @media only screen and (max-width:700px) {
-  .modal_body, .modal-body-flex {
+  .modal-body, .modal-body-flex {
     display: block;
     max-width: 450px;
   }
