--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@
   padding-left: 20px;
   box-sizing: border-box;
 }
-.modal-right span{
+.date{
   display: block;
   padding: 15px 0 5px 0;
   color: rgb(184, 179, 179);
