--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,11 @@
   padding: 15px 0 5px 0;
   color: rgb(184, 179, 179);
 }
+.comments{
+  font-size: 20px;
+  text-align: center;
+  color: #849bac;
+}
 .modal-close{
   text-align: right;
   flex: 1;
